# cellproject

./: .gitignore  LICENSE  README.org  cellproject_overview.ipynb  cellproject_overview.py  cellproject_scaling.ipynb  cellproject_scaling.py  cellproject_use_case.ipynb  cellproject_use_case.py  pyproject.toml  requirements.txt
cellproject/: Rbatch_correct.py  __init__.py  umapfit.py  utils.py
cellproject/subRoutines/: Rutils.R  batch_correct.R
cellproject/tests/: test_main.py
